# api-rust-rocket

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20231019131623_first_migration.sql
src/: lib.rs  main.rs
src/config/: database.rs  settings.rs
src/controllers/: mod.rs  task_controllers.rs  user_controllers.rs
src/middleware/: auth.rs
src/models/: mod.rs  task_model.rs  user_model.rs
src/repository/: task_repository.rs  user_repository.rs
src/routes/: login_routes.rs  mod.rs  router.rs  task_routes.rs  user_routes.rs
src/types/: database.rs  mod.rs  task.rs  token.rs  user.rs
tests/: integration_test.rs
