[package]
name = "todo-list-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
bcrypt = "0.15.0"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "migrate",
] }

tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
axum-test = "12.2.0"
